fixed 'of total' font size on mobile modal

--- a/src/page-sections/federal-covid-spending/tracking/tracking.module.scss
+++ b/src/page-sections/federal-covid-spending/tracking/tracking.module.scss
@@ -103,13 +103,11 @@ h2 {
 .selectionAmountVal {
 	display: inline;
 	font-weight: 300;
-	font-size: 24px;
 }
 
 .selectionAmountValSmall {
 	display: inline;
 	font-weight: 300;
-	font-size: 18px;
 }
 
 .section-heading {
@@ -201,6 +199,14 @@ h2 {
       margin-right: 1.5rem;
     }
   }
+
+  .selectionAmountVal {
+    font-size: 24px;
+  }
+  
+  .selectionAmountValSmall {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: $desktop - 1) {
@@ -281,6 +287,14 @@ h2 {
   .modal-subtitle {
     font-size: 18px !important;
     font-weight: 300;
+  }
+
+  .selectionAmountVal {
+    font-size: 18px;
+  }
+  
+  .selectionAmountValSmall {
+    font-size: 14px;
   }
 }
 
